fixed horizontal scroll on smaller screen

--- a/sites/default/themes/mnartists/sass/style.scss
+++ b/sites/default/themes/mnartists/sass/style.scss
@@ -380,6 +380,10 @@ hr {
 
 /* @group Layout */
 
+.container {
+    overflow: auto;
+}
+
 .spacing_top {
     margin-top: 10px !important;
 }
